--- a/package.json
+++ b/package.json
@@ -19,19 +19,13 @@
     "lint": "eslint --ext .js --ext .jsx src ",
     "lint-fix": "eslint --fix --ext .js --ext .jsx src ",
     "stylelint": "stylelint **/*.scss",
-    "stylelint-fix": "stylelint **/*.scss --fix"
+    "stylelint-fix": "stylelint **/*.scss --fix",
+    "pre-commit": "lint-staged",
+    "commit-msg": "node script/verify-commit.js",
+    "pre-push": "npm test"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "node script/verify-commit.js",
-      "pre-push": "npm test"
-    }
-  },
+ 
   "lint-staged": {
-    "*.js": "eslint",
-    "*.@(css|scss)": "stylelint",
-    "src/**/*.js": "eslint",
     "src/*.{js,jsx,mjs,ts,tsx}": [
       "node_modules/.bin/eslint --fix",
       "git add"
