--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx src ",
+    "lint-fix": "eslint --fix --ext .js",
     "stylelint": "stylelint **/*.scss",
     "stylelint-fix": "stylelint **/*.scss --fix"
   },
