feat: 初始化项目

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "node script/verify-commit.js",
-      "pre-push": "push-staged"
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
@@ -37,12 +37,6 @@
     "src/*.{css,scss,less,json,html,md,markdown}": [
       "node_modules/.bin/stylelint --fix",
       "git add"
-    ]
-  },
-  "push-staged": {
-    "src/*.{js,jsx,mjs,ts,tsx}": [
-      "npm test",
-      "git push"
     ]
   },
   "eslintConfig": {
