--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "node script/verify-commit.js",
-      "pre-push": "npm test"
+      "pre-push": "npm test git push"
     }
   },
   "lint-staged": {
