--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eslint-prettier-react-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://AlieZ-Deng.github.io/react-lint-action-demo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
